# LMS7002M-driver

./: .gitignore  CMakeLists.txt  README.md
LMS7002M/lms7suite/: CommonUtilities.cpp  CommonUtilities.h  control_LMS7002App.h  version.h
LMS7002M/lms7suite/controlLogic/: ADF_module.h  CMakeLists.txt  ConnectionCOM.cpp  ConnectionCOM.h  File_.h  IConnection.h  LMS7002M_Commands.h  LMS7002_MainControl.h  MessageLog.h  PLL_CGEN.h  PLL_SX.cpp  PLL_SX.h  RegistersMap.cpp  RegistersMap.h  Si5351C.cpp  SignalHandler.cpp  lmThread.cpp  lmThread.h  streamFPGA.cpp  streamFPGA.h
LMS7002M/lms7suite/controlPanelGUI/: CMakeLists.txt  ComboBoxMap.cpp  ComboBoxMap.h  GUIPanel.h  ResourceImagesLoader.cpp  ResourceImagesLoader.h  controlPanel_LMS7002.h  dlgConnectionManager.h  dlgFloatInput.cpp  dlgFloatInput.h  dlgGFIR_Coefficients.cpp  dlgMessageLog.h  dlgNCOSweepTest.h  dlgRegisterMap.cpp  dlgRegisterTest.h  dlgViewIRAM.cpp  dlgViewSFR.cpp  pnlADF.cpp  pnlADF.h  pnlAFE.cpp  pnlAlgorithms.h  pnlBIAS.cpp  pnlBIAS.h  pnlBuffersEVB7v2.cpp  pnlCLKGEN.cpp  pnlFPGAControls.cpp  pnlFreqTable.h  pnlLDO.cpp  pnlLDO.h  pnlLMS7002.cpp  pnlProgramming.cpp  pnlProgramming.h  pnlRFE.cpp  pnlRxTSP.h  pnlSPI.h  pnlSXT.h  pnlSi5351.cpp  pnlSi5351.h  pnlSocketBoard.cpp  pnlSocketBoard.h  (+8 more)
LMS7002M/lms7suite/controlPanelGUI/fft/: SamplesCollector.cpp  SamplesCollector.h  iniParser.h
LMS7002M/lms7suite/controlPanelGUI/fft/oglGraph/: OpenGLGraph.cpp
evb7/: CMakeLists.txt  EVB7Device.cpp  EVB7Device.hpp  EVB7Regs.hpp  README.md  SoapySDREVB7.cpp  Streaming.cpp
include/LMS7002M/: LMS7002M.h  LMS7002M_afe.h  LMS7002M_cal.h  LMS7002M_cal_rbb.h  LMS7002M_cal_tbb.h  LMS7002M_cgen.h  LMS7002M_config.h  LMS7002M_impl.h  LMS7002M_lml.h  LMS7002M_logger.h  LMS7002M_nco.h  LMS7002M_rbb.h  LMS7002M_regs.h  LMS7002M_rfe.h  LMS7002M_rxtsp.h  LMS7002M_sxx.h  LMS7002M_tbb.h  LMS7002M_time.h  LMS7002M_trf.h  LMS7002M_txtsp.h  LMS7002M_util.h
interfaces/: README.md  spidev_interface.h  sysfs_gpio_interface.h  xilinx_user_gpio.h  xilinx_user_mem.h
lms-suite/LMS7002M/lms7suite/: CMakeLists.txt  README.txt  control_LMS7002App.cpp  resource.rc
lms-suite/LMS7002M/lms7suite/controlLogic/: ADF_module.cpp  Algorithms.cpp  Algorithms.h  CoefficientFileParser.cpp  ConnectionManager.cpp  ConnectionManager.h  ConnectionSPI.cpp  ConnectionSPI.h  ConnectionUSB.cpp  ConnectionUSB.h  ControlParameters.h  LMS7002_MainControl.cpp  MCU_BD.cpp  MCU_BD.h  MessageLog.cpp  PLL_CGEN.cpp  Programmer.cpp  Programmer.h  Si5351C.h  SignalHandler.h  iniParser.h  lmSemaphore.cpp  lmSemaphore.h
lms-suite/LMS7002M/lms7suite/controlPanelGUI/: PluginPanel.h  controlPanel_LMS7002.cpp  dlgAbout.cpp  dlgAbout.h  dlgConnectionManager.cpp  dlgGFIR_Coefficients.h  dlgMessageLog.cpp  dlgNCOSweepTest.cpp  dlgRegisterMap.h  dlgRegisterTest.cpp  dlgVCOSweepTest.cpp  dlgVCOSweepTest.h  dlgVCO_SX.cpp  dlgVCO_SX.h  dlgViewIRAM.h  dlgViewSFR.h  pnlAFE.h  pnlAlgorithms.cpp  pnlBIST.cpp  pnlBIST.h  pnlBoard.cpp  pnlBoard.h  pnlBuffersEVB7v2.h  pnlCDS.cpp  pnlCDS.h  pnlCLKGEN.h  pnlFPGAControls.h  pnlFreqTable.cpp  pnlLMS7002.h  pnlLimeLightPAD.cpp  pnlLimeLightPAD.h  pnlMCU_BD.cpp  pnlMCU_BD.h  pnlMyriad7.cpp  pnlMyriad7.h  pnlRBB.cpp  pnlRBB.h  pnlRFE.h  pnlRxTSP.cpp  pnlSPI.cpp  (+5 more)
lms-suite/LMS7002M/lms7suite/controlPanelGUI/fft/: BlockingFIFO.h  CMakeLists.txt  FFTcalculator.cpp  FFTcalculator.h  Packets.h  PlotUpdateThread.cpp  PlotUpdateThread.h  UnitsButton.cpp  UnitsButton.h  dlgExtraControls.cpp  dlgExtraControls.h  pnlFFTviewer.cpp  pnlFFTviewer.h
lms-suite/LMS7002M/lms7suite/controlPanelGUI/fft/oglGraph/: OpenGLGraph.h
regs/: README.md  afe.json  bias.json  cgen.json  dccal.json  defaults.json  endir.json  ldo.json  lml.json  raw_regs.json  rbb.json  reg_parser.py  regen.sh  rfe.json  rxnco.json  rxtsp.json  sxx.json  tbb.json  trf.json  txnco.json  txtsp.json  xbuf.json
src/: LMS7002M_afe.c  LMS7002M_cal.c  LMS7002M_cal.h  LMS7002M_cal_rbb.c  LMS7002M_cal_tbb.c  LMS7002M_cgen.c  LMS7002M_dccal.c  LMS7002M_filter_cal.c  LMS7002M_filter_cal.h  LMS7002M_filtersCalibration.c  LMS7002M_gfir.c  LMS7002M_impl.c  LMS7002M_impl.h  LMS7002M_ldo.c  LMS7002M_lml.c  LMS7002M_lms7api.c  LMS7002M_lms7api.h  LMS7002M_logger.c  LMS7002M_nco.c  LMS7002M_parameters.c  LMS7002M_parameters.h  LMS7002M_ported.c  LMS7002M_ported.h  LMS7002M_rbb.c  LMS7002M_rfe.c  LMS7002M_rx_filter_cal.c  LMS7002M_rxtsp.c  LMS7002M_statuses.h  LMS7002M_sxx.c  LMS7002M_tbb.c  LMS7002M_time.c  LMS7002M_trf.c  LMS7002M_tx_filter_cal.c  LMS7002M_txtsp.c  LMS7002M_vco.c  LMS7002M_vco.h  LMS7002M_xbuf.c
test/: Makefile  access_test.c  gpio_test.c  spidev_test.c
